RESOLVED FIXED23669
Using malloc to allocate wxFonts results in invalid wxFonts
https://bugs.webkit.org/show_bug.cgi?id=23669
Summary Using malloc to allocate wxFonts results in invalid wxFonts
Diggilin
Reported 2009-01-31 18:30:39 PST
Hashtable uses malloc to allocate table space (as directed in FontCache, not wx specific) which means that FontPlatformData's wxFont doesn't get allocated properly (vtable is null).
Attachments
Fixes this bug (9.42 KB, patch)
2009-01-31 18:38 PST, Diggilin
kevino: review+
Diggilin
Comment 1 2009-01-31 18:38:19 PST
Created attachment 27226 [details] Fixes this bug
Kevin Ollivier
Comment 2 2009-02-01 11:40:47 PST
Thanks for all your hard and meticulous work on tracking this down! It still amazes me that this code did not exhibit any issues on 2.8 despite clearly having a serious problem. However, the shared pointer approach is in line with what other ports do and avoids this problem nicely.
Kevin Ollivier
Comment 3 2009-02-04 12:32:10 PST
Landed in r40615, thanks!
Note You need to log in before you can comment on or make changes to this bug.