Reviewed by Kevin Ollivier.

Switch to using a ref-counted wxFont pointer for FontPlatformData to fix a crash
with assigning to uninitialized HashTable buckets.

https://bugs.webkit.org/show_bug.cgi?id=23669


Canonical link: https://commits.webkit.org/32760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40615 268f45cc-cd09-0410-ab3c-d52691b4dbfc