WebCore/platform/graphics/SimpleFontData.h
@@ -131,7 +131,7 @@ public:
 #endif
 
 #if PLATFORM(WX)
-    wxFont getWxFont() const { return m_font.font(); }
+    wxFont* getWxFont() const { return m_font.font(); }
 #endif
 
 private:
