WebCore/platform/graphics/wx/SimpleFontDataWx.cpp
@@ -45,14 +45,16 @@ namespace WebCore
 
 void SimpleFontData::platformInit()
 {    
-    wxFont font = m_font.font();
-    wxFontProperties props = wxFontProperties(&font);
-    m_ascent = props.GetAscent();
-    m_descent = props.GetDescent();
-    m_lineSpacing = props.GetLineSpacing();
-    m_xHeight = props.GetXHeight();
-    m_unitsPerEm = 1; // FIXME!
-    m_lineGap = props.GetLineGap();
+    wxFont *font = m_font.font();
+    if (font && font->IsOk()) {
+        wxFontProperties props = wxFontProperties(font);
+        m_ascent = props.GetAscent();
+        m_descent = props.GetDescent();
+        m_lineSpacing = props.GetLineSpacing();
+        m_xHeight = props.GetXHeight();
+        m_unitsPerEm = 1; // FIXME!
+        m_lineGap = props.GetLineGap();
+    }
 }
 
 void SimpleFontData::platformDestroy()
@@ -79,8 +81,8 @@ bool SimpleFontData::containsCharacters(const UChar* characters, int length) con
 
 void SimpleFontData::determinePitch()
 {
-    if (m_font.font().Ok())
-        m_treatAsFixedPitch = m_font.font().IsFixedWidth();
+    if (m_font.font() && m_font.font()->Ok())
+        m_treatAsFixedPitch = m_font.font()->IsFixedWidth();
     else
         m_treatAsFixedPitch = false;
 }
@@ -89,7 +91,7 @@ float SimpleFontData::platformWidthForGlyph(Glyph glyph) const
 {
     // TODO: fix this! Make GetTextExtents a method of wxFont in 2.9
     int width = 10;
-    GetTextExtent(m_font.font(), (wxChar)glyph, &width, NULL);
+    GetTextExtent(*m_font.font(), (wxChar)glyph, &width, NULL);
     return width;
 }
 
