WebCore/platform/wx/wxcode/gtk/non-kerned-drawing.cpp
@@ -44,9 +44,9 @@ void drawTextWithSpacing(GraphicsContext* graphicsContext, const SimpleFontData*
     wxDC* dc = graphicsContext->platformContext();
 #endif
 
-    wxFont wxfont = font->getWxFont();
-    if (wxfont.IsOk())
-        dc->SetFont(wxfont);
+    wxFont* wxfont = font->getWxFont();
+    if (wxfont && wxfont->IsOk())
+        dc->SetFont(*wxfont);
     dc->SetTextForeground(color);
 
     // convert glyphs to wxString
